support creating executions and atom execution with artifacts and events
