# api/service.swagger.json
@@ -265,6 +265,31 @@
         "tags": [
           "MetadataService"
         ]
+      },
+      "post": {
+        "operationId": "CreateExecutions",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiCreateExecutionsResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "description": "The Executions set to create.",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiCreateExecutionInfoSet"
+            }
+          }
+        ],
+        "tags": [
+          "MetadataService"
+        ]
       }
     },
     "/api/v1alpha1/artifact_types/{name}/artifacts/{id}": {
@@ -575,18 +600,17 @@
         "parameters": [
           {
             "name": "parent",
-            "description": "Creates the specified artifact as an instance of ExecutionType with this\nfully qualified name. |parent| takes the form\n`execution_types/{namespace}/{name\u003e}`.",
+            "description": "Creates the specified execution as an instance of ExecutionType with this\nfully qualified name. |parent| takes the form\n`execution_types/{namespace}/{name\u003e}`.",
             "in": "path",
             "required": true,
             "type": "string"
           },
           {
             "name": "body",
-            "description": "The Execution to create. Note that Execution.type_id is ignored.",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/ml_metadataExecution"
+              "$ref": "#/definitions/apiExecArtifactsAndEvents"
             }
           }
         ],
@@ -623,6 +647,23 @@
         }
       }
     },
+    "apiArtifactAndEvent": {
+      "type": "object",
+      "properties": {
+        "artifact_type_name": {
+          "type": "string"
+        },
+        "artifact": {
+          "$ref": "#/definitions/ml_metadataArtifact",
+          "description": "If the artifact does not exist, then it inserts the artifact.\nOtherwise it updates the artifact."
+        },
+        "event": {
+          "$ref": "#/definitions/ml_metadataEvent",
+          "description": "The event.artifact_id and event.execution_id is optional but must align\nwith the `artifact`.id / `execution`.id respectively."
+        }
+      },
+      "description": "A pair of an artifact and an event used or generated by an execution."
+    },
     "apiCreateArtifactResponse": {
       "type": "object",
       "properties": {
@@ -641,12 +682,44 @@
         }
       }
     },
+    "apiCreateExecutionInfo": {
+      "type": "object",
+      "properties": {
+        "execution_type_name": {
+          "type": "string",
+          "description": "Creates the specified executions as an instance of ExecutionType with the\nqualified execution type name."
+        },
+        "execution": {
+          "$ref": "#/definitions/ml_metadataExecution"
+        }
+      }
+    },
+    "apiCreateExecutionInfoSet": {
+      "type": "object",
+      "properties": {
+        "execution_info": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiCreateExecutionInfo"
+          },
+          "collectionFormat": "multi"
+        }
+      }
+    },
     "apiCreateExecutionResponse": {
       "type": "object",
       "properties": {
         "execution": {
           "$ref": "#/definitions/ml_metadataExecution",
           "description": "Newly created execution with id."
+        },
+        "artifacts": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ml_metadataArtifact"
+          },
+          "description": "The artifacts related to this new created execution.",
+          "collectionFormat": "multi"
         }
       }
     },
@@ -656,6 +729,36 @@
         "execution_type": {
           "$ref": "#/definitions/ml_metadataExecutionType",
           "description": "Newly created execution type with id."
+        }
+      }
+    },
+    "apiCreateExecutionsResponse": {
+      "type": "object",
+      "properties": {
+        "executions": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ml_metadataExecution"
+          },
+          "description": "Newly created executions with id.",
+          "collectionFormat": "multi"
+        }
+      }
+    },
+    "apiExecArtifactsAndEvents": {
+      "type": "object",
+      "properties": {
+        "execution": {
+          "$ref": "#/definitions/ml_metadataExecution",
+          "description": "The Execution to create. Note that Execution.type_id is ignored."
+        },
+        "artifact_event_pairs": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiArtifactAndEvent"
+          },
+          "description": "The list of artifact and event pairs.",
+          "collectionFormat": "multi"
         }
       }
     },
